Fixing layout problem that caused long links to increase mobile page width
Removing unneeded floats that caused word-wrap to fail
Long words (URLs) now break correctly at mobile sizes

--- a/app/scss/epochtalk/epochtalk.scss
+++ b/app/scss/epochtalk/epochtalk.scss
@@ -581,7 +581,7 @@ pagination {
 
 .post-title {
   color: $color-gray-med;
-  float: left;
+  // float: left;
   width: 100%;
 }
 
@@ -611,7 +611,6 @@ pagination {
 
 .post-body {
   margin-bottom: 1.2rem;
-  float: left;
   // width: 83.3333%;
   word-wrap: break-word;
   overflow-wrap: break-word;
